# contextengine

./: .gitignore  README.md  context.json  cred.txt  pyproject.toml  pytest.ini  requirements.txt
docker/: Dockerfile  docker-compose.observability.yml  docker-compose.yml
docker/observability/: prometheus.yml
docker/observability/grafana/dashboards/: contextengine-ai.json  contextengine-api.json  contextengine-system.json  contextengine-traces.json  dashboards.yml
docker/observability/grafana/datasources/: datasources.yml
src/app/agents/: __init__.py  base.py  librarian.py  researcher.py  summarizer.py  verifier.py  writer.py
src/app/core/: config.py  environment.py  errors.py  registry.py  schemas.py
src/app/core/utils/: async_utils.py  helpers.py
src/app/ingestion/: __init__.py  bm25.py  chunking.py  extractors.py  metadata.py  models.py  pipeline.py  utils.py
src/app/interfaces/api/: main.py
src/app/interfaces/web/: app.js  index.html  styles.css
src/app/observability/: metrics.py  tracing.py
src/app/retrieval/: __init__.py  evidence.py  pinecone_client.py  reranker.py
src/app/runtime/: engine.py  middleware.py
src/app/storage/: __init__.py  cache.py  context_blueprints.py  files.py  pinecone.py
tests/: README.md  __init__.py  conftest.py
tests/agents/: test_agents.py
tests/retrieval/: test_retrieval_mocked.py
tests/runtime/: test_api_integration.py  test_engine_integration.py  test_new_features.py
